--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^1.14.1",
     "copy-webpack-plugin": "^3.0.1",
     "jasmine": "^2.4.1"
   }
