--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack-dev-server --config src/webpack.config.js --progress --colors",
+    "build": "webpack-dev-server --config webpack.config.js --progress --colors",
     "test": "jasmine",
     "clean": "rm -rf node_modules"
   },
